theme.css
@import url('https://fonts.googleapis.com/css?family=Open+Sans|Righteous|Roboto|Varela+Round');
@keyframes pulse {
  from {
    transform: scale(1, 1);
  }

  50% {
    transform: scale(1.2, 1.2);
  }

  to {
    transform: scale(1, 1);
  }
}
* {
  padding: 0;
  margin: 0;
  color: #454545;
}
a {
  text-decoration: none;
}
.header {
  background-color: #f1f1f1;
  text-align: left;
  width: 100%;
  height: 5em;
  position: fixed;
  top: 0px;
  display: flex;
  justify-content: space-between;
  z-index: 1;
}
.header>img {
  position: relative;
  right: 10%;
  flex-grow: 2;
  object-fit: contain;
  width: 20%;
  height: 80%;
  margin-top: auto;
  margin-bottom: auto;
}
.header .RE {
  flex-grow: 0.5;
  height: 5em;
  display: flex;
}
.header .RE a {
  display: flex; justify-content: center;
  position: relative;
  width: 50%;
  padding: 5%;
  padding-bottom: 0px;
  height: 90%;
}
.header .RE a .overlay {
  position: absolute;
  overflow: hidden;
  width: 100%;
  height: 0;
  transition: .5s ease;
}
.header .RE a .overlay p {
  text-align: center;
  margin-top: 33%;
  margin-bottom:auto;
  color: white;
  font-size: 1.2em;
}
.header .RE a .teach {
  bottom: 5%;
  right: 0;
  left: 0;
  background-color: #b36d12;
}
.header .RE a .fam {
  top: 0;
  right: 0;
  left:0;
  background-color: #299c1a;
}
.header a:hover .overlay {
  height: 95%;
}
.header .RE a img {
  height: inherit;
  width: 5em;
}
.header>a {
  margin-top: auto;
  margin-bottom: auto;
  margin-left: 2em;
  margin-right: 2em;
  height: 3em;
  font-size: 0.9em;
  flex-grow: 1;
  text-align: center;
  max-width: 8em;
}
.header a h3 {
  margin-top: 0.5em;
  margin-bottom: auto;
}
.header>a:hover {
  border-radius: 4px;
  background-color: #ddd;
  color: black;
}
.header>a:active {
  background-color: dodgerblue;
}
.header>a:active h3 {
  color: white;
}
html, body{
  height: 100%;
  font-family: 'Open Sans', sans-serif;
}
.bigtitle {
  position: relative;
  z-index: 2;
  height: 100%;
  width: 100%;
}
.bigtitle .background {
  -webkit-filter: brightness(50%);
  filter: brightness(50%);
  width: 100%;
  height: 100%;
}
.bigtitle .frontground {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  width: 100%;
  height: 100%;
  display: flex;
  flex-direction: column;
  align-content: center;
  align-items: center;
  justify-content: space-between;
}
.bigtitle .frontground [alt="Farnesina Logo"] {
  margin-top: 2em;
  width: 10%;
  filter: invert(100%);
}
.bigtitle .frontground .RE {
  position: absolute;
  top: 1em;
  right: 1em;
  width: 10%;
}
.bigtitle .frontground .RE img {

  opacity: 0.6;
  width: 80%;
  transition: 0.5s ease;

}
.bigtitle .frontground .RE a {
  display: block;
  position: relative;
  top: -2em;
  opacity: 0;
  font-size: 1.3em;
  transition: 0.5s ease;
  background-color: #64646483;
  padding: 0.5em;
  margin: 0.2em;
  border-radius: 10px; 
}
.bigtitle .frontground .RE a h3 {
  color: white;
}
.bigtitle .frontground .RE:hover img {
  transform: scale(1.3);
  opacity: 1;
}
.bigtitle .frontground .RE:hover a {
  opacity: 1;
  transform: translateY(2em)
}
.bigtitle .frontground .RE:hover a:hover {
  background-color: dodgerblue;
}
.bigtitle .frontground .nav {
  border-bottom: 1px;
  border-bottom-color: white;
  border-bottom-style: solid;
}
.bigtitle .frontground .nav a {
  margin: 1em;
  color: white;
  font-size: 1.3em;
  transition: font-size 0.1s linear;
}
.bigtitle .frontground .nav a:hover {
  font-size: 1.5em;
}
.bigtitle .frontground h1 {
  font-family: 'Varela Round', sans-serif;
  font-size: 4em;
  text-align: center;
  color: white;
}
.bigtitle .frontground>a {
  width: 3%;
  margin-bottom: 1.3em;
  animation-fill-mode: both;
  animation-iteration-count: infinite;
  animation-name: pulse;
  animation-duration: 3s;
}
.bigtitle .frontground a img {
  width: 100%;
  -webkit-filter: brightness(80%);
  filter: brightness(80%);
}
#main {
  margin: 10% auto auto auto;
  width: 90%;
  display: grid;
  grid-template: auto auto / 1fr 2.5fr;
  grid-gap: 1em;
}
#main #contacts {
  grid-area: 1 / 1 / span 2 / span 1;
  padding: 1em;
  background: #f1f1f1;
}
#main #contacts p {
  text-align: right;
}
#main #contacts h1 {
  text-align: center;
  margin-bottom: 1em;
}
#main #contacts a {
  text-align: center;
  margin: auto;
}
#main #contacts .infocontact {
  margin-top: 2em;
  margin-bottom: 2em;
}
#main #contacts img {
  width: 3em;
}
#main #greets {
  margin: 1em;
  grid-area: 1 / 2 / span 1 / span 1;
}
#main #comunications {
  margin: 1em;
  grid-area: 2 / 2 / span 1 / span 1;
}
.footer {
  height: 3000px;
}

